# graphix

./: CMakeLists.txt  LICENSE  main.cpp
include/glad/: glad.h
include/glm/: CMakeLists.txt
resources/shaders/: default.frag
shaders/: default.vert
src/: glad.c  main.cpp
src/graphics/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  stb_image.cpp
